[metadata]
name = pi-weather-station
description = Showing the temperature as a number and graph on your raspberry pi's sense-hat
long_description_content_type = text/markdown
url = https://github.com/szigyi/pi-weather-station
project_urls =
    Bug Tracker = https://github.com/szigyi/pi-weather-station/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    sense-hat >= 2.4.0
    sense-hat-matrix >= 0.0.6

[options.packages.find]
where = src

;[options.entry_points]
;console_scripts =
;    pi-weather-station = pi-weather-station.App:main
